--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
     <main>
         <H1>Penny Flip Game</H1>
         <div>
-            <div>Penny Image Display, Button Controls, and Status Message</div>
+            <div>
+                <div>
+                    <img id="penny-image" src="assets/images/penny-heads.jpg" alt="penny coin"
+                         class="controls">
+
+                   <buttom id="flip">Flip the penny</buttom>
+                   <buttom id="clear">clear scoreboard</buttom>
+
+                   <div class="message-container">
+                        <h3 id="message">Lets get Rolling</h3>
+                   </div>
+                 </div>
+                </div>
             <hr>
             <div>
                 <h2>Scoreboard</h2>
